# FFmpegProject

./: .gitignore  CMakeLists.txt  main.cpp
include/: audiodecoder.h  audioencoder.h  common.h  deep_copy_packey_queue.h  demux.h  mux.h  packet_queue.h  ring_buffer.h  videodecoder.h  videoencoder.h
src/: audiodecoder.cpp  audioencoder.cpp  common.cpp  demux.cpp  mux.cpp  ring_buffer.cpp  videodecoder.cpp  videoencoder.cpp
